assets/css/easyadmin-theme/forms.css
/* ... */
.form-tabs-tablist .nav-tabs .nav-link.active:after {
    content: "";
    inline-size: calc(100% - 2 * var(--form-tabs-gutter-x));
    block-size: 2px;
    background: var(--link-color);
    position: absolute;
    inset-block-end: -2px;
    inset-inline-start: var(--form-tabs-gutter-x);
}
.form-tabs-tablist .nav-tabs .nav-item:first-child .nav-link.active:after {
    inline-size: calc(100% - var(--form-tabs-gutter-x));
    inset-inline-start: 0;
}

.form-tabs-tablist .nav-tabs .nav-item .badge {
    line-height: 1;
    margin-inline-start: 4px;
    padding: 3px 6px;
}

.form-tabs-content .tab-help {
    color: var(--form-tabs-help-color);
    margin-block-start: -10px;
    margin-block-end: 15px;
}

/* Form columns */
.form-column .form-column-title {
    display: flex;
    flex-direction: column;
    margin-block-end: 15px;
}
.form-column .form-column-title .form-column-title-content {
    align-items: center;
    display: flex;
    color: var(--form-column-header-color);
    font-size: 17px;
    font-weight: bold;
    padding: 0 0 2px;
}

.form-column .form-column-title .form-column-icon {
    color: var(--form-column-icon-color);
    margin-inline-end: 10px;
}

.form-column .form-column-title .form-column-help {
    color: var(--form-column-help-color);
    flex: 1;
    margin: 0;
}
.form-column .field-form_fieldset {
    margin-block-end: var(--bs-gutter-x);
}

.form-column .form-fieldset {
    border-radius: var(--border-radius);
    box-shadow: inset 0 0 0 1px var(--form-fieldset-border-color);
}

.form-column .form-fieldset-header {
    box-shadow: none;
    padding: calc(var(--bs-gutter-x) - 5px) var(--bs-gutter-x) calc(var(--bs-gutter-x) / 2);
}

.form-column .form-fieldset-header .form-fieldset-title .form-fieldset-title-content {
    box-shadow: none;
    padding: 0;
}

.form-column .form-fieldset-header .form-fieldset-title .form-fieldset-help {
    margin-block-start: 2px;
}

.form-column .form-fieldset-body {
    padding: 5px var(--bs-gutter-x) 0;
}
.form-column .form-fieldset-body.without-header {
    padding: var(--bs-gutter-x) var(--bs-gutter-x) 0;
}

/* Form fieldsets */
.field-form_fieldset {
    margin-block-end: calc(1.5 * var(--bs-gutter-x)); /* not a typo; don't use --bs-gutter-y here */
}

.form-section-empty {
    padding: 25px 10px 25px;
}

.form-fieldset-header {
    align-items: flex-start;
    display: flex;
    flex-wrap: nowrap;
    padding: 0 0 15px;
    position: relative;
}
.form-fieldset-header .form-fieldset-collapse-marker {
    color: var(--form-fieldset-collapse-marker-color);
    font-size: 90%;
    margin: 0 10px 0 2px;
    transform: rotate(90deg);
    transition: transform 0.2s ease-out;
}

.form-fieldset-header .form-fieldset-title {
    flex: 1;
}
.form-fieldset-header .form-fieldset-title .form-fieldset-title-content {
    align-items: center;
    box-shadow: 0 1px 0 var(--form-fieldset-header-border-color);
    display: flex;
    color: var(--form-fieldset-header-color);
    font-size: 17px;
    font-weight: bold;
    padding: 0 0 5px;
}
.form-fieldset-header .form-fieldset-title .form-fieldset-title-content.not-collapsible {
    cursor: default;
}
.form-fieldset-header .form-fieldset-title .form-fieldset-title-content.collapsed .form-fieldset-collapse-marker {
    transform: rotate(0deg);
}
.form-fieldset-header .form-fieldset-title .form-fieldset-title-content .collapsible::after {
    content: "";
    position: absolute;
    inline-size: 100%;
    block-size: 100%;
    inset-block-start: 0;
    inset-inline-start: 0;
}

.form-fieldset-header .form-fieldset-title .form-fieldset-icon {
    color: var(--form-fieldset-icon-color);
    margin-inline-end: 10px;
}

.form-fieldset-header .form-fieldset-title .form-fieldset-help {
    color: var(--form-fieldset-help-color);
    margin-block-start: 6px;
}

/* using CSS Grid is needed for a smooth collapse animation */
.form-fieldset-body {
    display: grid;
    grid-template-rows: 1fr;
    transition: grid-template-rows 0.2s ease-out;
    overflow: clip;
}

.form-fieldset-body.collapse:not(.show) {
    display: grid;
    grid-template-rows: 0fr;
}

.form-fieldset-body.collapsing {
    display: grid;
    block-size: auto !important;
    overflow: clip;
}

.form-fieldset-body > .row {
    min-block-size: 0;
    overflow: clip;
}

@media (prefers-reduced-motion: reduce) {
    .form-fieldset-body,
    .form-column .form-fieldset-header,
    .form-fieldset-header .form-fieldset-collapse-marker {
        transition-duration: 0.01ms !important;
    }
}

/* Form actions ("Save changes", "Delete", etc.) */
.form-actions {
    display: flex;
    justify-content: flex-end;
    padding: 0;
}
.form-actions .btn {
    margin-inline-start: 10px;
}

/* Form errors */
.has-error .form-help,
.has-error .control-label,
.has-error .radio,
.has-error .checkbox,
.has-error .radio-inline,
.has-error .checkbox-inline,
.has-error.radio label,
.has-error.checkbox label,
.has-error.radio-inline label,
.has-error.checkbox-inline label {
    color: var(--form-help-error-color);
}

.has-error .form-widget input.form-control,
.has-error .form-widget textarea.form-control,
.has-error .form-widget .form-select,
.has-error .form-widget input.form-check-input,
.has-error .ea-fileupload .input-group,
.has-error .btn.input-file-container,
.has-error .CodeMirror,
.has-error.ea-text-editor-wrapper,
.has-error.form-group .ea-text-editor-wrapper {
    border-color: var(--form-input-error-border-color);
    box-shadow: var(--form-input-error-shadow);
}
.form-group.has-error label,
.form-group.has-error legend {
    color: var(--form-input-error-legend-color);
}

.has-error .ea-fileupload .input-group {
    border-radius: var(--border-radius);
}

.global-invalid-feedback {
    background: var(--form-global-error-bg);
    border: var(--form-global-error-border);
    border-radius: var(--border-radius);
    color: var(--form-global-error-color);
    font-size: 14px;
    margin: 5px 0;
    padding: 6px 12px;
}
/* ... */

